# hass-geofence-journal

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/instructions/: home-assistant-development.instructions.md
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/: __init__.py
custom_components/geofence_journal/: __init__.py  backup.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  disk_space.py  entity_state.py  export.py  export_csv.py  export_file.py  generation.py  geofence.py  ha_clock.py  ha_confirmation.py  ha_observer.py  http.py  lifecycle.py  limits.py  listener.py  location.py  maintenance.py  management_backend.py  management_events.py  management_resources.py  management_retention.py  manager.py  manifest.json  models.py  process_data.py  repairs.py  resource_catalog.py  retention.py  sensor.py  service_actions.py  service_catalog_dispatch.py  service_dispatch.py  service_responses.py  services.py  (+2 more)
scripts/: __init__.py  release.py  release_archive.py  release_contract.py  release_errors.py  release_metadata.py  release_repository.py  release_sources.py
tests/: test_backup_lifecycle.py  test_config_flow.py  test_confirmation_recheck.py  test_data_lifecycle.py  test_database_maintenance.py  test_diagnostics.py  test_disk_space.py  test_entities.py  test_entity_registry.py  test_event_mutations.py  test_export_concurrency.py  test_export_file.py  test_geofence.py  test_ha_clock.py  test_init.py  test_init_unload_transactions.py  test_last_event_projection.py  test_lifecycle_errors.py  test_lifecycle_file_size.py  test_lifecycle_process_data.py  test_listener.py  test_listener_backpressure.py  test_listener_lifecycle.py  test_location.py  test_maintenance_error_boundaries.py  test_management_catalog.py  test_management_operations.py  test_management_reset_integration.py  test_manager.py  test_manager_failures.py  test_manager_lifecycle.py  test_metadata.py  test_model_contracts.py  test_pause_resume_lifecycle.py  test_purge_query_plans.py  test_release_artifact_smoke.py  test_release_contract_failures.py  test_release_metadata.py  test_release_scenarios.py  test_release_tool.py  (+32 more)
(+25 files in other folders)
