[project]
name = "hass-geofence-journal"
version = "0.1.0b1"
description = "Crash-safe geofence event journaling for Home Assistant"
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "homeassistant>=2026.7,<2026.8",
    "pydantic>=2.12.5,<3",
    "voluptuous>=0.15.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-homeassistant-custom-component>=0.13.300",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    "ignore:It is recommended to use web\\.(AppKey|RequestKey) instances:aiohttp.web_exceptions.NotAppKeyWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["custom_components.geofence_journal"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["custom_components", "scripts", "tests"]
exclude = [".venv", ".venv-*", ".venv*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "CPY001", "D203", "D213", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "D", "PLR2004", "S101", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.14"
pythonPlatform = "All"
include = ["custom_components/geofence_journal", "scripts", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/.venv-*", "**/.venv*"]
reportMissingParameterType = "error"
reportMissingTypeStubs = false # HA's external pytest plugin does not publish stubs.
reportUnnecessaryTypeIgnoreComment = "error"
reportTypedDictNotRequiredAccess = false # HA FlowResult keys depend on result type.
reportUnknownMemberType = false # HA FlowManager exposes an untyped input mapping.
reportUnusedVariable = "error"
reportUnnecessaryComparison = false # Exhaustive match guards intentionally name Never.
